--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,15 @@
 url: "https://blog.liquidbytes.net"
 baseURL: "https://blog.liquidbytes.net"
 pygmentsuseclasses: true
-name: Liquid Bytes
-title: Liquid Bytes
+name: "Liquid Bytes"
+title: "Liquid Bytes - Software Engineering & Management Blog"
 languageCode: "en-us"
-description: 'Software Engineering &amp; Management Blog'
 theme: liquidbytes
-copyright: "You are free to share if you link back to this blog"
+copyright: "You are free to share"
 publishDir: "../lastzero.github.io"
 params:
+  author: Michael Mayer
+  description: "Michael learned coding on an Atari 1040 ST and started his first open-source projects in the 90s. He has more than 20 years of experience in leading teams and building Web applications."
   footer_menus:
     - name: "Links"
       menu: "profiles"
@@ -20,9 +21,6 @@ params:
   authorgithub: imperialwicket
   authorbio: Some dude.
   authorimage: faces.jpg
-  author:
-    name: "Michael Mayer"
-    link: "https://blog.liquidbytes.net"
   inc:
     # Blog Information
     title:        "Hugo Incorporated"
@@ -55,7 +53,7 @@ menu:
     - Name: "About"
       URL: "/about"
       Weight: 20
-    - Name: "Open-Source"
+    - Name: "Open Source"
       URL: "/opensource"
       Weight: 30
     - Name: "Contact"
@@ -76,9 +74,9 @@ menu:
     - Name: "PhotoPrism"
       URL: "https://photoprism.org/"
       Weight: 10
-    - Name: "Symlex"
-      URL: "https://github.com/symlex"
-      Weight: 20
     - Name: "TweetHog"
       URL: "https://github.com/lastzero/tweethog"
+      Weight: 20
+    - Name: "Symlex"
+      URL: "https://github.com/symlex"
       Weight: 30
