--- a/config.yaml
+++ b/config.yaml
@@ -29,7 +29,7 @@ params:
   author: Michael Mayer
   description: "Michael learned coding on an Atari 1040 ST and started his first open-source projects in the 90s. He has more than 20 years of experience in leading teams and building Web applications."
   footer_menus:
-    - name: "Links"
+    - name: "Social"
       menu: "profiles"
     - name: "Projects"
       menu: "projects"
